--- a/Frontend/react_frontend/package.json
+++ b/Frontend/react_frontend/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.3.3"
   }
 }
