--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -10,6 +10,7 @@ Flask-JWT-Extended==4.4.4
 Flask-MQTT==1.1.1
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==3.0.3
+Flask-SocketIO==5.3.6
 greenlet==2.0.2
 importlib-metadata==6.1.0
 importlib-resources==5.12.0
