--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,12 @@ Flask==2.2.3
 Flask-Caching==2.0.2
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
+Flask-Limiter==2.1.3
 Flask-MQTT==1.1.1
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==3.0.3
+Flask-SocketIO==5.3.6
+Flask-Talisman==1.0.0
 greenlet==2.0.2
 importlib-metadata==6.1.0
 importlib-resources==5.12.0
@@ -17,6 +20,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+marshmallow==3.19.0
 paho-mqtt==1.6.1
 postgres==4.0
 psycopg2-binary==2.9.6
