--- a/Frontend/react_frontend/package.json
+++ b/Frontend/react_frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-js": "^4.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.8",
