--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: homeautomation
+      POSTGRES_DB: home_db
       POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-changeme}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-your_secure_password}
     ports:
       - "5432:5432"
     healthcheck:
@@ -38,13 +38,14 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./Backend:/app/Backend
+      - ./Backend/certs:/app/Backend/certs
     ports:
       - "5000:5000"
     environment:
       - FLASK_ENV=development
       - POSTGRES_USER=${DB_USER:-postgres}
-      - POSTGRES_PASSWORD=${DB_PASSWORD:-changeme}
-      - POSTGRES_DB=homeautomation
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-your_secure_password}
+      - POSTGRES_DB=home_db
       - MQTT_BROKER_URL=mqtt
       - MQTT_BROKER_PORT=1883
     depends_on:
